objects/tdc_cti__Call_Routing_Step_Detail__c/tdc_cti__Call_Routing_Step_Detail__c.object-meta.xml
<CustomObject>
    <label>Call Routing Step Detail</label>
    <nameField>
        <displayFormat>CRSDN-{00000}</displayFormat>
        <label>Call Routing Step Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Call Routing Step Detail</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>