objects/tdc_cti__Call_Routing_Step_Detail__c/fields/tdc_cti__Call_Routing__c.field-meta.xml
<CustomField>
    <fullName>tdc_cti__Call_Routing__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Call Routing</label>
    <referenceTo>tdc_cti__Call_Routing__c</referenceTo>
    <relationshipLabel>Call Routing Step Detail</relationshipLabel>
    <relationshipName>Call_Routing_Step_Detail</relationshipName>
    <type>Lookup</type>
</CustomField>