objects/tdc_cti__Call_Routing_Step_Detail__c/fields/tdc_cti__Call_Routing_Step__c.field-meta.xml
<CustomField>
    <fullName>tdc_cti__Call_Routing_Step__c</fullName>
    <label>Call Routing Step</label>
    <referenceTo>tdc_cti__Call_Routing_Step__c</referenceTo>
    <relationshipLabel>Call Routing Step Detail (Call Routing Step)</relationshipLabel>
    <relationshipName>Call_Routing_Step_Detail</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>