objects/tdc_cti__Call_Routing_Step_Detail__c/fields/tdc_cti__Next_Step__c.field-meta.xml
<CustomField>
    <fullName>tdc_cti__Next_Step__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Next Step</label>
    <referenceTo>tdc_cti__Call_Routing_Step__c</referenceTo>
    <relationshipLabel>Call Routing Step Detail</relationshipLabel>
    <relationshipName>Call_Routing_Step_Details</relationshipName>
    <type>Lookup</type>
</CustomField>