objects/tdc_cti__Call_Routing_Step_Detail__c/fields/tdc_cti__Numbers__c.field-meta.xml
<CustomField>
    <fullName>tdc_cti__Numbers__c</fullName>
    <label>Numbers</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>