objects/tdc_cti__Call_Routing_Step_Detail__c/fields/tdc_cti__Second__c.field-meta.xml
<CustomField>
    <fullName>tdc_cti__Second__c</fullName>
    <label>Second</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>